[package]
name = "rust_torrent"
version = "0.1.0"
edition = "2024"

[dependencies]
bitvec = "1.1.1"
iced = { version = "0.14.0", features = ["tokio"] }
rand = "0.10.2"
reqwest = "0.13.4"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_bencode = "0.2.4"
serde_bytes = "0.11.19"
sha1 = "0.11.0"
slab = "0.4.12"
tokio = { version = "1.53.0", features = ["full", "io-util", "time"] }
